fix failsafe plugin to run application on jvm 1.8