@@ -34,6 +34,7 @@
         <jackson-databind.version>2.9.10.3</jackson-databind.version>
         <jackson-annotations.version>2.9.5</jackson-annotations.version>
         <hibernate-validator.version>6.1.2.Final</hibernate-validator.version>
+        <surefire-plufin.version>2.22.0</surefire-plufin.version>
     </properties>
 
     <distributionManagement>
@@ -230,6 +231,12 @@
                 <version>1.4.200</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -250,7 +257,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.0</version>
                 </plugin>
 
                 <!-- Embedded Jetty HTTP Server for testing war application -->
@@ -273,9 +279,9 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         <includes>
                             <include>**/*IT*</include>
                         </includes>
